# inmoov_ros

./: .gitignore  INSTALL.MD
CV/: puntos.py
inmoov_bringup/: package.xml
inmoov_bringup/config/: config.yaml
inmoov_bringup/include/: constants.py  export_yaml.py  load_config_from_param.py  servos.py
inmoov_bringup/launch/: bringup.launch  bringup_gui.launch  bringup_servobus.launch
inmoov_bringup/tools/head_tracking/: head_tracking.py
inmoov_bringup/tools/perception_listener/: perception_listener.py
inmoov_bringup/tools/routine/: ai.py  angles.txt  arms_swing.py  arms_talk.py  chat.py  counter.py  leer.py  leo_ai.py  money.py  mover.py  pizza.py  routine.py  say_hi.py  stream.py  stt.py  transf.py  tts.py  tts_example.py  wave.py
inmoov_bringup/tools/rutinas/: cabeza.py  counter.py  demo.py  heead_arms.py  nvidia@10.42.0.1
inmoov_bringup/tools/trainer/: trainer.py
inmoov_description/robots/: inmoov.urdf.xacro
inmoov_description/urdf/: asmArm.urdf.xacro  asmHead.urdf.xacro
inmoov_firmware/: README.md  TeensyServo.cpp  TeensyServo.h  configuration.h  inmoov_firmware.ino  protocol.h
inmoov_msgs/: CMakeLists.txt
inmoov_msgs/msg/: PerceptionFrame.msg
leonardo_control/: CMakeLists.txt  package.xml
leonardo_control/src/: LeonardoArmControl.cpp  QuaternionTransform.cpp  leonardo_control_node.cpp
modelo_leo/: CMakeLists.txt  package.xml
modelo_leo/config/: joint_names_modelo_leo.yaml
modelo_leo/launch/: display.launch  gazebo.launch
modelo_leo/meshes/: L1.STL  L2.STL  L3.STL  L4.STL  base_link.STL
modelo_leo/urdf/: modelo_leo.urdf
(+3 files in other folders)
